--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>resume_190628</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.png">
+    <title>陳叙廷 - 履歷和作品集</title>
   </head>
   <body>
     <noscript>
