--- a/vue-router-workaround/aboutMe.html
+++ b/vue-router-workaround/aboutMe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=./index.html">
+  <meta http-equiv="refresh" content="0; url=./">
   <title>Redirect for vue-router-workaround</title>
 </head>
 <body>
